# Houdini-Geospatial-Tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  load_geojson_multilinestring.py
.github/workflows/: rust.yml
gdal-dtm-exporter/: Cargo.toml  Readme.org
gdal-dtm-exporter/gdal-dtm-exporter-bin/: Cargo.toml
gdal-dtm-exporter/gdal-dtm-exporter-bin/src/: main.rs
gdal-dtm-exporter/gdal-dtm-exporter-gui/: Cargo.toml
gdal-dtm-exporter/gdal-dtm-exporter-lib/: Cargo.toml
gdal-dtm-exporter/gdal-dtm-exporter-lib/src/: mod.rs
gdal-dtm-exporter/gui/: Cargo.toml
gdal-dtm-exporter/gui/src/: main.rs
gdal-dtm-exporter/lib/: Cargo.toml
gdal-dtm-exporter/lib/src/: mod.rs
gdal-dtm-exporter/src/: main.rs
python/notebooks/: Save_GeoTIFF_as_ply.ipynb
python/vv-openusd-geojson-exporter/: README.md  pyproject.toml
python/vv-openusd-geojson-exporter/src/vv/openusd_geojson_exporter/: cli.py  core.py
python/vv_geojson/: README.md  geo_utils.py  load_geojson_multilinestring.py
src/gdal-dtm-exporter/: Readme.org
src/gdal-dtm-exporter/assets/: ply_header.txt
src/notebooks/: Save_GeoTIFF_as_ply.ipynb
src/vv_geojson/: geo_utils.py  main.py
test/sample_files/: .gitignore
test/sample_files/MultiPolygon/: europe.geojson  italy.geojson  oceania.geojson
